--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <body>
     Сайт студента гр.3419В
 Шумаков Никита
-    <a href="22oct24.html"> 22октября 2024 </a>
+    <a href="22oct24.html"> 22 октября 2024 </a>
+    <a href="01nov24.html"> 1 ноября 2024 </a>
   </body>
 </html>
