--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 Шумаков Никита
     <a href="22oct24.html"> 22 октября 2024 </a>
     <a href="01nov24.html"> 1 ноября 2024 </a>
+    <br>
+    <a href="oper.html">Операционные системы</a>
   </body>
 </html>
