--- a/01nov24.html
+++ b/01nov24.html
@@ -11,15 +11,15 @@
     <button onclick="startRul()">СТАРТ</button><script>
         let rul = document.getElementById('rul');
         let angle = 0;
-        function rotateRul () { //вращет колесо
+        function rotateRul () {
             angle +=2;
         rul.style.transform = 'rotate('+angle+'deg)'
     }
     let timer;
-    function startRul(){ // вызывается при нажатии кнопки "СТАРТ"
+    function startRul(){
      timer = setInterval(rotateRul, 1);
     }
-    function stopRul(){ // вызывается при нажатии кнопки "СТОП"
+    function stopRul(){ 
     clearInterval(timer) } 
     </script>
 </body>
